<resources>
    <string name="app_name">Lab Sample Analyser</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="pref_hough_dp">Ratio of accumulator</string>
    <string name="pref_hough_dp_summ">The inverse ratio of resolution</string>
    <string name="pref_hough_minDist">Minimum distance between circles</string>
    <string name="pref_hough_minDist_summ">Minimum distance between the centers of the detected organisms</string>
    <string name="pref_hough_oedt">Threshold of edge detection</string>
    <string name="pref_hough_oedt_summ">Gradient value to handle organism edge detection</string>
    <string name="pref_hough_ofdt">Threshold of organism centers</string>
    <string name="pref_hough_ofdt_summ">Gradient value to handle organism form detection</string>
    <string name="pref_hough_minRad">Minimum circle radius</string>
    <string name="pref_hough_minRad_summ">Minimum radio to be detected</string>
    <string name="pref_hough_maxRad">Maximum circle radius</string>
    <string name="pref_hough_maxRad_summ">Maximum radio to be detected</string>
    <string name="pref_cat_1">Algorithm Parameters</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="author1">J. L. Rodríguez</string>
    <string name="author2">B. E. Millán</string>
    <string name="author3">UNAM</string>
    <string name="quantifications">Quantifications</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="numberoforganisms">Number of Organisms: %1$d</string>
    <string name="title_activity_analyse_static">AnalyseStatic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from_picture">From Picture</string>
</resources>
